# snowpro-core-mastery

./: .gitignore  README.md  index.html  pyproject.toml  start.bat  start.sh
.claude/: settings.local.json
assets/: databricks-practice-test.json
assets/css/: styles.css
assets/js/: app.js  error-handler.js  quiz.js
assets/markdown/tests/: markdown-test-exam.json
exams/New folder/: Test 19 with categories.json  Test 21 with categories.json  backup.html
exams/New folder/Summary/: part 1.json  part 4.json  part 5.json
exams/PARTS/: 1-31.json  1026-1125.json  1126-1225.json  120-150.json  1226-1455.json  151-180.json  181-210.json  211-240.json  241-270.json  271-300.json  301-350.json  32-74.json  351-400.json  401-475.json  551-625.json  626-725.json  726-825.json  74-119.json  826-925.json  926-1025.json  snowflake_master_set.json
exams/databricks/Data Eng/markdown/tests/: databricks-certified-data-engineer-associate.json
exams/snowflake/pro core/: Gemini Exam 2.json  Official Practice Test.json  Test 20 with categories.json
exams/snowflake/pro core/New folder/: Gemini Exam 1.json  Test  sequences.json  test_19.json
exams/snowflake/pro core/New folder/Summary/: part 2.json  part 3.json
tests/: README.md  run-tests.js  run-tests.py  test-exam-persistence.html
