[project]
name = "certification-mastery-suite"
version = "1.0.0"
description = "A modern web application for certification exam preparation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"